Update from https://github.com/sahithyandev/static-blog/commit/96fdb905cb1cfac6e993b4c3afc8f81cc0950a72

--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
         transform: translateY(-100%);
         animation: topBannerDropin 0.3s ease-in-out 10s forwards;
       }
+      .top-banner .ua-flag {
+        height: 1.2rem;
+        vertical-align: center;
+      }
 
       .top-banner a {
         color: #adb4ff;
@@ -249,7 +253,7 @@
           alt="🇺🇦"
           src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
           draggable="true"
-          style="height: 1rem"
+          class="ua-flag"
         />
       </div>
       <nav>
