Update from https://github.com/sahithyandev/static-blog/commit/e9c5181ab0b1c1796c6056daba38ad0c24eebf87

--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@
       }
       .top-banner .ua-flag {
         height: 1.2rem;
-        vertical-align: center;
+        vertical-align: middle;
       }
-
       .top-banner a {
         color: #adb4ff;
         text-decoration: underline;
