--- a/projects.html
+++ b/projects.html
@@ -161,6 +161,15 @@
 
   <body>
     <div id="root">
+      <div class="top-banner">
+        I support Ukraine
+        <img
+          alt="🇺🇦"
+          src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
+          draggable="false"
+          class="ua-flag"
+        />
+      </div>
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
