--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
       <main>
         <h1>About</h1>
         <p>
-          Hello!, I am Sahithyan, a 17-year-old web developer, a student and a
+          Hello!, I am Sahithyan, a 18-year-old web developer, a student and a
           tech enthusiast. I am from Jaffna, Sri Lanka.
         </p>
         <p>I know HTML, CSS, JavaScript and TypeScript.</p>
@@ -154,8 +154,7 @@
         <p>
           This website is made using Preact (TypeScript), Sass, MDX and Rollup.
           And hosted using GitHub Pages. For security reasons, I have made the
-          source code of this website private. I will be publishing a write-up
-          about how I made this site and why I made it private, soon.
+          source code of this website private.
         </p>
         <h2>Contact me</h2>
         <p>
@@ -167,111 +166,30 @@
             rel="noopener noreferrer"
             class="styled-link"
             >@sahithyandev</a
-          >. You can also use the below-listed social media accounts too. And
-          you can also email me at
+          >. You can email me at
           <a
             href="mailto:sahithyan2701@gmail.com"
             target="_blank"
             rel="noopener noreferrer"
             class="styled-link"
             >sahithyan2701@gmail.com</a
-          >.
-        </p>
-        <div class="social-links">
+          >. And also, you can find me on
           <a
-            title="Twitter (sahithyandev)"
-            href="https://www.twitter.com/sahithyandev"
-            target="_blank"
-            rel="noopener noreferrer"
-            class=""
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-brand-twitter"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path
-                d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"
-              ></path>
-            </svg> </a
-          ><a
-            title="Instagram (sahithyan_)"
             href="https://www.instagram.com/sahithyan_"
             target="_blank"
             rel="noopener noreferrer"
-            class=""
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-brand-instagram"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <rect x="4" y="4" width="16" height="16" rx="4"></rect>
-              <circle cx="12" cy="12" r="3"></circle>
-              <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
-            </svg> </a
-          ><a
-            title="GitHub (sahithyandev)"
+            class="styled-link"
+            >Instagram</a
+          >
+          and
+          <a
             href="https://www.github.com/sahithyandev"
             target="_blank"
             rel="noopener noreferrer"
-            class=""
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-brand-github"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path
-                d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
-              ></path>
-            </svg> </a
-          ><a
-            title="RSS Feed"
-            href="https://sahithyandev.github.io/feed.xml"
-            target="_blank"
-            rel="noopener noreferrer"
-            class=""
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-rss"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <circle cx="5" cy="19" r="1"></circle>
-              <path d="M4 4a16 16 0 0 1 16 16"></path>
-              <path d="M4 11a9 9 0 0 1 9 9"></path>
-            </svg>
-          </a>
-        </div>
+            class="styled-link"
+            >GitHub</a
+          >!
+        </p>
       </main>
       <footer>© Sahithyan 2022</footer>
     </div>
