Update from https://github.com/sahithyandev/static-blog/commit/95b3462393422059a0f06a4e8e1d7efeeb78c008

--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,8 @@
           src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
           draggable="false"
           class="ua-flag"
+          width="36"
+          height="36"
         />
       </div>
       <nav>
