--- a/404.html
+++ b/404.html
@@ -65,8 +65,6 @@
       defer=""
     ></script>
 
-    <link rel="stylesheet" href="/global.css" />
-
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
@@ -85,40 +83,20 @@
         console.warn("pageData error", e);
       }
     </script>
-    <style>
-      html,
-      body {
-        height: 100vh;
-      }
-
-      #root {
-        height: inherit;
-        display: flex;
-        flex-direction: column;
-      }
-
-      #main {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
   </head>
 
   <body>
     <div id="root">
       <div class="top-banner">
-        I support Ukraine
-        <img
-          alt="🇺🇦"
-          src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
-          draggable="false"
-          class="ua-flag"
-          width="36"
-          height="36"
-        />
+        To know about what the fuck happened to this site, visit the
+        <a
+          href="https://css-naked-day.github.io"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="styled-link"
+          >Annual CSS Naked Day</a
+        >
+        website.
       </div>
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
