--- a/about.html
+++ b/about.html
@@ -65,6 +65,8 @@
       defer=""
     ></script>
 
+    <link rel="stylesheet" href="/global.css" />
+
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
@@ -83,20 +85,45 @@
         console.warn("pageData error", e);
       }
     </script>
+    <style>
+      .social-links {
+        display: flex;
+        gap: 0.5rem;
+        margin: 0.5rem auto 0;
+        width: fit-content;
+      }
+      .social-links a {
+        transition: opacity cubic-bezier(0.6, 0, 0.3, 1) 150ms;
+        opacity: 0.6;
+      }
+      .social-links a:hover {
+        opacity: 1;
+      }
+
+      .styled-link {
+        color: var(--secondary);
+        transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
+        text-decoration: underline;
+      }
+
+      .styled-link:hover {
+        color: var(--secondary-dark);
+      }
+    </style>
   </head>
 
   <body>
     <div id="root">
       <div class="top-banner">
-        To know about what the fuck happened to this site, visit the
-        <a
-          href="https://css-naked-day.github.io"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="styled-link"
-          >Annual CSS Naked Day</a
-        >
-        website.
+        I support Ukraine
+        <img
+          alt="🇺🇦"
+          src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
+          draggable="false"
+          class="ua-flag"
+          width="36"
+          height="36"
+        />
       </div>
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
