--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,8 @@
       defer=""
     ></script>
 
+    <link rel="stylesheet" href="/global.css" />
+
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
@@ -83,20 +85,91 @@
         console.warn("pageData error", e);
       }
     </script>
+    <style>
+      .projects-container {
+        --column-count: 3;
+        margin-top: 28px;
+        display: grid;
+        grid-template-columns: repeat(var(--column-count), 1fr);
+        gap: 16px 24px;
+      }
+      @media (max-width: 840px) {
+        .projects-container {
+          --column-count: 2;
+        }
+      }
+      @media (min-width: 640px) {
+        .projects-container {
+          position: relative;
+          left: -10%;
+          width: 120%;
+        }
+      }
+      @media (max-width: 640px) {
+        .projects-container {
+          --column-count: 1;
+        }
+      }
+
+      .project-card {
+        padding: 18px 22px;
+        border-radius: 5px;
+        font-size: 0.9rem;
+        background-color: var(--project-card-bg);
+      }
+      .project-card .project-name {
+        margin-top: 0;
+        margin-bottom: 20px;
+        font-size: 1.2rem;
+        color: var(--secondary);
+      }
+      .project-card .project-description {
+        max-width: 90%;
+        margin-bottom: 20px;
+      }
+      .project-card .project-links {
+        display: flex;
+        gap: 10px;
+      }
+      .project-card .project-links a {
+        --border-color: hsl(240deg 5% 40%);
+        --local-background: var(--project-card-bg);
+        --color: var(--font-color);
+        padding: 5px 11px;
+        border: 1px solid var(--border-color);
+        font-size: 0.87rem;
+        transition-property: background-color, border-color, color, fill, stroke;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 150ms;
+        background: var(--local-background);
+        color: var(--color);
+      }
+      .project-card .project-links a:hover,
+      .project-card .project-links a:focus {
+        --local-background: hsl(213deg 71% 40%);
+      }
+      @media (prefers-color-scheme: light) {
+        .project-card .project-links a:hover,
+        .project-card .project-links a:focus {
+          --local-background: var(--secondary);
+          --color: var(--background);
+        }
+      }
+    </style>
   </head>
 
   <body>
     <div id="root">
       <div class="top-banner">
-        To know about what the fuck happened to this site, visit the
-        <a
-          href="https://css-naked-day.github.io"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="styled-link"
-          >Annual CSS Naked Day</a
-        >
-        website.
+        I support Ukraine
+        <img
+          alt="🇺🇦"
+          src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
+          draggable="false"
+          class="ua-flag"
+          width="36"
+          height="36"
+        />
       </div>
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
