Update from https://github.com/sahithyandev/static-blog/commit/9d5573847bea870f8934c9fff927a3a606578143

--- a/404.html
+++ b/404.html
@@ -117,14 +117,17 @@
         ></label>
         <ul>
           <li data-animation-delay-id="0">
+            <a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a>
+          </li>
+          <li data-animation-delay-id="1">
             <a href="/projects" class="nav--link" data-is-internal=""
               >Projects</a
             >
           </li>
-          <li data-animation-delay-id="1">
+          <li data-animation-delay-id="2">
             <a href="/posts" class="nav--link" data-is-internal="">Posts</a>
           </li>
-          <li data-animation-delay-id="2">
+          <li data-animation-delay-id="3">
             <a href="/about" class="nav--link" data-is-internal="">About</a>
           </li>
         </ul>
