Update from https://github.com/sahithyandev/static-blog/commit/ada669374a3c7dedc13f52048f6eda22f1dea886

--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -35,7 +35,7 @@
       property="og:image"
       content="https://sahithyandev.github.io/og-dp-maker.png"
     />
-    <meta property="og:image:alt" content="The " dp="" maker"="" tool"="">
+    <meta property="og:image:alt" content="The 'DP Maker' tool" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
@@ -80,7 +80,7 @@
     <script>
       let pageData;
       try {
-        pageData = JSON.parse(`%PAGE_DATA%`);
+        pageData = JSON.parse(`{}`);
       } catch (e) {
         console.warn("pageData error", e);
       }
