--- a/tidbits.html
+++ b/tidbits.html
@@ -80,7 +80,7 @@
     <script>
       let pageData;
       try {
-        pageData = JSON.parse(`%PAGE_DATA%`);
+        pageData = JSON.parse(`{}`);
       } catch (e) {
         console.warn("pageData error", e);
       }
