Update from https://github.com/sahithyandev/static-blog/commit/26d27d22720ff128704cb6f52ae9bdd667885cbb

--- a/tidbits.html
+++ b/tidbits.html
@@ -97,7 +97,7 @@
 
       .tidbit-container {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: 280px auto;
         grid-template-rows: auto 1fr;
         grid-template-areas: "img title" "img description";
         column-gap: 20px;
@@ -169,8 +169,7 @@
                 class="tidbit--img"
                 src="/og-dp-maker.png"
                 alt="DP Maker project"
-                width="1200"
-                height="630"
+                style="aspect-ratio: 1200 / 630"
               />
               <p class="tidbit--description">
                 With this little tool you can create gradient-bordered display
