--- a/posts.html
+++ b/posts.html
@@ -81,7 +81,7 @@
       let pageData;
       try {
         pageData = JSON.parse(
-          `{"posts":[{"slug":"the-is-odd-npm-package-meme","estReadTime":"2 min read","title":"The is-odd NPM package","tags":["meme"],"dateCreated":"4 November 2021","lastUpdatedOn":"14 March 2022"},{"slug":"a-javascript-quiz","estReadTime":"8 min read","title":"A JavaScript Quiz — Explained","description":"Explanation of an amazing quiz I took an year ago.","tags":["explanation"],"dateCreated":"17 September 2021","lastUpdatedOn":"14 March 2022"},{"slug":"building-xcalc","estReadTime":"8 min read","title":"Story of Building XCalc","description":"Sharing how I built XCalc, an extended calculator.","tags":["experience","project"],"dateCreated":"10 June 2021","lastUpdatedOn":"3 June 2022"},{"slug":"javascript-shorthands","estReadTime":"4 min read","title":"JavaScript Shorthands","description":"Do you write JavaScript a lot? These shorthands might be helpful to you.","tags":["javascript"],"dateCreated":"7 April 2021","lastUpdatedOn":"14 March 2022"},{"slug":"divisibility-rules","estReadTime":"8 min read","title":"Divisibility Rules - An Explanation","description":"How much time would you need to check if a given number is divisible by 2 –15 without a computer? Well, for the first few numbers, you would be so fast. But you will get stuck at 7 or 13 right? Don't worry. After reading this article, you won't. Give it a try.","tags":["mathematics"],"dateCreated":"27 February 2021","lastUpdatedOn":"14 March 2022"}]}`
+          `{"posts":[{"slug":"a-javascript-quiz","estReadTime":"8 min read","title":"A JavaScript Quiz — Explained","description":"Explanation of an amazing quiz I took an year ago.","tags":["explanation"],"dateCreated":"17 September 2021","lastUpdatedOn":"14 March 2022"},{"slug":"building-xcalc","estReadTime":"8 min read","title":"Story of Building XCalc","description":"Sharing how I built XCalc, an extended calculator.","tags":["experience","project"],"dateCreated":"10 June 2021","lastUpdatedOn":"3 June 2022"},{"slug":"divisibility-rules","estReadTime":"8 min read","title":"Divisibility Rules - An Explanation","description":"How much time would you need to check if a given number is divisible by 2 –15 without a computer? Well, for the first few numbers, you would be so fast. But you will get stuck at 7 or 13 right? Don't worry. After reading this article, you won't. Give it a try.","tags":["mathematics"],"dateCreated":"27 February 2021","lastUpdatedOn":"14 March 2022"},{"slug":"javascript-shorthands","estReadTime":"4 min read","title":"JavaScript Shorthands","description":"Do you write JavaScript a lot? These shorthands might be helpful to you.","tags":["javascript"],"dateCreated":"7 April 2021","lastUpdatedOn":"14 March 2022"},{"slug":"the-is-odd-npm-package-meme","estReadTime":"2 min read","title":"The is-odd NPM package","tags":["meme"],"dateCreated":"4 November 2021","lastUpdatedOn":"14 March 2022"}]}`
         );
       } catch (e) {
         console.warn("pageData error", e);
@@ -200,17 +200,6 @@
           /><noscript>Search can't work without JavaScript.</noscript>
         </div>
         <div class="posts-container">
-          <div class="post-card show" data-slug="the-is-odd-npm-package-meme">
-            <span class="post-released-date">4 November 2021</span
-            ><a
-              href="/post/the-is-odd-npm-package-meme"
-              data-is-internal=""
-              class=" "
-              ><h3 class="title">The is-odd NPM package</h3></a
-            >
-            <p class="description"></p>
-            <div class="tags-container"><span class="tag">meme</span></div>
-          </div>
           <div class="post-card show" data-slug="a-javascript-quiz">
             <span class="post-released-date">17 September 2021</span
             ><a href="/post/a-javascript-quiz" data-is-internal="" class=" "
@@ -236,19 +225,6 @@
               ><span class="tag">project</span>
             </div>
           </div>
-          <div class="post-card show" data-slug="javascript-shorthands">
-            <span class="post-released-date">7 April 2021</span
-            ><a href="/post/javascript-shorthands" data-is-internal="" class=" "
-              ><h3 class="title">JavaScript Shorthands</h3></a
-            >
-            <p class="description">
-              Do you write JavaScript a lot? These shorthands might be helpful
-              to you.
-            </p>
-            <div class="tags-container">
-              <span class="tag">javascript</span>
-            </div>
-          </div>
           <div class="post-card show" data-slug="divisibility-rules">
             <span class="post-released-date">27 February 2021</span
             ><a href="/post/divisibility-rules" data-is-internal="" class=" "
@@ -264,6 +240,30 @@
             <div class="tags-container">
               <span class="tag">mathematics</span>
             </div>
+          </div>
+          <div class="post-card show" data-slug="javascript-shorthands">
+            <span class="post-released-date">7 April 2021</span
+            ><a href="/post/javascript-shorthands" data-is-internal="" class=" "
+              ><h3 class="title">JavaScript Shorthands</h3></a
+            >
+            <p class="description">
+              Do you write JavaScript a lot? These shorthands might be helpful
+              to you.
+            </p>
+            <div class="tags-container">
+              <span class="tag">javascript</span>
+            </div>
+          </div>
+          <div class="post-card show" data-slug="the-is-odd-npm-package-meme">
+            <span class="post-released-date">4 November 2021</span
+            ><a
+              href="/post/the-is-odd-npm-package-meme"
+              data-is-internal=""
+              class=" "
+              ><h3 class="title">The is-odd NPM package</h3></a
+            >
+            <p class="description"></p>
+            <div class="tags-container"><span class="tag">meme</span></div>
           </div>
         </div>
       </main>
