Update from https://github.com/sahithyandev/static-blog/commit/efbc65a8ec5029f97990fcf8dfac1700375bdec7

--- a/404.html
+++ b/404.html
@@ -76,6 +76,10 @@
           });
       }
     </script>
+    <script
+      data-not-for-production="true"
+      src="http://localhost:35729/livereload.js"
+    ></script>
 
     <script>
       let pageData;
@@ -116,18 +120,18 @@
           class="hamburger-icon"
         ></label>
         <ul>
-          <li data-animation-delay-id="0">
+          <li>
             <a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a>
           </li>
-          <li data-animation-delay-id="1">
+          <li>
             <a href="/projects" class="nav--link" data-is-internal=""
               >Projects</a
             >
           </li>
-          <li data-animation-delay-id="2">
+          <li>
             <a href="/posts" class="nav--link" data-is-internal="">Posts</a>
           </li>
-          <li data-animation-delay-id="3">
+          <li>
             <a href="/about" class="nav--link" data-is-internal="">About</a>
           </li>
         </ul>
