--- a/index.html
+++ b/index.html
@@ -76,12 +76,16 @@
           });
       }
     </script>
+    <script
+      data-not-for-production="true"
+      src="http://localhost:35729/livereload.js"
+    ></script>
 
     <script>
       let pageData;
       try {
         pageData = JSON.parse(
-          `{"latestPosts":[{"slug":"a-javascript-quiz","estReadTime":"8 min read","title":"A JavaScript Quiz — Explained","description":"Explanation of an amazing quiz I took an year ago.","tags":["explanation"],"dateCreated":"17 September 2021","lastUpdatedOn":"14 March 2022"},{"slug":"building-xcalc","estReadTime":"8 min read","title":"Story of Building XCalc","description":"Sharing how I built XCalc, an extended calculator.","tags":["experience","project"],"dateCreated":"10 June 2021","lastUpdatedOn":"3 June 2022"},{"slug":"divisibility-rules","estReadTime":"8 min read","title":"Divisibility Rules - An Explanation","description":"How much time would you need to check if a given number is divisible by 2 –15 without a computer? Well, for the first few numbers, you would be so fast. But you will get stuck at 7 or 13 right? Don't worry. After reading this article, you won't. Give it a try.","tags":["mathematics"],"dateCreated":"27 February 2021","lastUpdatedOn":"14 March 2022"},{"slug":"javascript-shorthands","estReadTime":"4 min read","title":"JavaScript Shorthands","description":"Do you write JavaScript a lot? These shorthands might be helpful to you.","tags":["javascript"],"dateCreated":"7 April 2021","lastUpdatedOn":"14 March 2022"}]}`
+          `{"latestPosts":[{"slug":"a-javascript-quiz","estReadTime":"8 min read","title":"A JavaScript Quiz — Explained","description":"Explanation of an amazing quiz I took an year ago.","tags":["explanation"],"dateCreated":"17 September 2021","lastUpdatedOn":"14 March 2022"},{"slug":"building-xcalc","estReadTime":"8 min read","title":"Story of Building XCalc","description":"Sharing how I built XCalc, an extended calculator.","tags":["experience","project"],"dateCreated":"10 June 2021","lastUpdatedOn":"3 June 2022"},{"slug":"divisibility-rules","estReadTime":"8 min read","title":"Divisibility Rules - An Explanation","description":"How much time would you need to check if a given number is divisible by 2 –15 without a computer? Well, for the first few numbers, you would be so fast. But you will get stuck at 7 or 13 right? Don't worry. After reading this article, you won't. Give it a try.","tags":["mathematics"],"dateCreated":"27 February 2021","lastUpdatedOn":"9 October 2022"},{"slug":"javascript-shorthands","estReadTime":"4 min read","title":"JavaScript Shorthands","description":"Do you write JavaScript a lot? These shorthands might be helpful to you.","tags":["javascript"],"dateCreated":"7 April 2021","lastUpdatedOn":"14 March 2022"}]}`
         );
       } catch (e) {
         console.warn("pageData error", e);
@@ -246,18 +250,18 @@
           class="hamburger-icon"
         ></label>
         <ul>
-          <li data-animation-delay-id="0">
+          <li>
             <a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a>
           </li>
-          <li data-animation-delay-id="1">
+          <li>
             <a href="/projects" class="nav--link" data-is-internal=""
               >Projects</a
             >
           </li>
-          <li data-animation-delay-id="2">
+          <li>
             <a href="/posts" class="nav--link" data-is-internal="">Posts</a>
           </li>
-          <li data-animation-delay-id="3">
+          <li>
             <a href="/about" class="nav--link" data-is-internal="">About</a>
           </li>
         </ul>
