Update from https://github.com/sahithyandev/static-blog/commit/ff4cef4d598d90ff8f2c965df25e6ee1083d5a4c

--- a/tidbits.html
+++ b/tidbits.html
@@ -76,10 +76,6 @@
           });
       }
     </script>
-    <script
-      data-not-for-production="true"
-      src="http://localhost:35729/livereload.js"
-    ></script>
 
     <script>
       let pageData;
@@ -186,5 +182,7 @@
       </main>
       <footer>© Sahithyan 2022</footer>
     </div>
+    <script src="/lib-preact.js"></script>
+    <script id="main-script" defer="" src="/tidbits.js"></script>
   </body>
 </html>
