--- a/404.html
+++ b/404.html
@@ -76,10 +76,6 @@
           });
       }
     </script>
-    <script
-      data-not-for-production="true"
-      src="http://localhost:35729/livereload.js"
-    ></script>
 
     <script>
       let pageData;
@@ -139,5 +135,6 @@
       <div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div>
       <footer>© Sahithyan 2022</footer>
     </div>
+    <script src="/lib-preact.js"></script>
   </body>
 </html>
