--- a/about.html
+++ b/about.html
@@ -76,10 +76,6 @@
           });
       }
     </script>
-    <script
-      data-not-for-production="true"
-      src="http://localhost:35729/livereload.js"
-    ></script>
 
     <script>
       let pageData;
@@ -191,5 +187,6 @@
       </main>
       <footer>© Sahithyan 2022</footer>
     </div>
+    <script src="/lib-preact.js"></script>
   </body>
 </html>
