Update from https://github.com/sahithyandev/static-blog/commit/8dbaa27c4977291529f358a6298bf2dcfef9dd20

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         margin-bottom: 6px;
         font-size: 3rem;
       }
-      .me-banner h3 {
+      .me-banner .tagline {
         grid-area: description;
         margin: 0;
         margin-bottom: 25px;
@@ -265,8 +265,9 @@
       <main>
         <div class="stretch-out me-banner">
           <h1>Sahithyan</h1>
-          <h3>student, web developer &amp; tech enthusiast</h3>
-          <a
+          <span class="tagline"
+            >student, web developer &amp; tech enthusiast</span
+          ><a
             href="/tools/dp-maker"
             class="me-image styled-link"
             title="You can create like this one for you!"
