Update from https://github.com/sahithyandev/static-blog/commit/0acbe3162dd3ae272c78e666bec833492ad1dce9

--- a/404.html
+++ b/404.html
@@ -108,7 +108,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
@@ -132,9 +132,12 @@
           </li>
         </ul>
       </nav>
-      <div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div>
-      <footer>© Sahithyan 2022</footer>
     </div>
+    <div id="root">
+      <div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div>
+    </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
   </body>
 </html>
