--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <div></div>
         <input type="checkbox" id="menu-toggle" /><label
@@ -262,6 +262,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div id="root">
       <main>
         <div class="stretch-out me-banner">
           <h1>Sahithyan</h1>
@@ -509,8 +511,9 @@
           </div>
         </section>
       </main>
-      <footer>© Sahithyan 2022</footer>
     </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
   </body>
 </html>
