--- a/projects.html
+++ b/projects.html
@@ -159,7 +159,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
@@ -183,6 +183,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div id="root">
       <main>
         <h1>Projects</h1>
         <p>Here are the projects I worked on recently.</p>
@@ -302,8 +304,9 @@
           </div>
         </section>
       </main>
-      <footer>© Sahithyan 2022</footer>
     </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
   </body>
 </html>
