--- a/tidbits.html
+++ b/tidbits.html
@@ -131,7 +131,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
@@ -155,6 +155,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div id="root">
       <main>
         <h1>Tidbits</h1>
         <p>
@@ -180,8 +182,9 @@
           >
         </div>
       </main>
-      <footer>© Sahithyan 2022</footer>
     </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
   </body>
 </html>
