--- a/tools/dp-maker.html
+++ b/tools/dp-maker.html
@@ -294,7 +294,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
@@ -318,6 +318,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div id="root">
       <main>
         <label for="img-input" class="dp-container"
           ><svg
@@ -465,6 +467,8 @@
         </div>
       </main>
     </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
     <script id="main-script" defer="" src="/tools/dp-maker.js"></script>
   </body>
