--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
@@ -137,6 +137,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div id="root">
       <main>
         <h1>About</h1>
         <p>
@@ -185,8 +187,9 @@
           >!
         </p>
       </main>
-      <footer>© Sahithyan 2022</footer>
     </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
   </body>
 </html>
