--- a/posts.html
+++ b/posts.html
@@ -166,7 +166,7 @@
   </head>
 
   <body>
-    <div id="root">
+    <div id="nav-bar">
       <nav>
         <a href="/" class="nav--logo" data-is-internal="">sahithyan</a
         ><input type="checkbox" id="menu-toggle" /><label
@@ -190,6 +190,8 @@
           </li>
         </ul>
       </nav>
+    </div>
+    <div id="root">
       <main>
         <h1>Posts</h1>
         <div class="search-container">
@@ -267,8 +269,9 @@
           </div>
         </div>
       </main>
-      <footer>© Sahithyan 2022</footer>
     </div>
+    <footer>© Sahithyan 2022</footer>
+
     <script src="/lib-preact.js"></script>
     <script id="main-script" defer="" src="/posts.js"></script>
   </body>
