Update from https://github.com/sahithyandev/static-blog/commit/0bab5d375815c7dbaac2ef1f3ee972bd4f71f593

--- a/about.html
+++ b/about.html
@@ -142,15 +142,16 @@
       <main>
         <h1>About</h1>
         <p>
-          Hello!, I am Sahithyan, a 18-year-old web developer, a student and a
-          tech enthusiast. I am from Jaffna, Sri Lanka.
+          Hello!, I am Sahithyan from Jaffna, Sri Lanka. I am a 18-year-old
+          Physical Science student in school. I have been developing web apps
+          for about 5 years (or more) using various technologies. AND I LOVE
+          IT!!.
         </p>
-        <p>I know HTML, CSS, JavaScript and TypeScript.</p>
         <h2>About this site</h2>
         <p>
-          This website is made using Preact (TypeScript), Sass, MDX and Rollup.
-          And hosted using GitHub Pages. For security reasons, I have made the
-          source code of this website private.
+          This website is made using Preact, TypeScript, Sass, MDX, Rollup, and
+          Gulp. And hosted using GitHub Pages. For security reasons, I have made
+          the source code of this website private.
         </p>
         <h2>Contact me</h2>
         <p>
