--- a/projects.html
+++ b/projects.html
@@ -190,6 +190,23 @@
         <p>Here are the projects I worked on recently.</p>
         <section class="projects-container">
           <div class="project-card">
+            <h2 class="project-name">Kalvi Community</h2>
+            <p class="project-description">
+              The official website of Kalvi Community, an educational-related
+              community from Sri Lanka on Viber and WhatsApp. Run by one of my
+              friends.
+            </p>
+            <div class="project-links">
+              <a
+                href="https://thamil.org"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="styled-link"
+                >Demo</a
+              >
+            </div>
+          </div>
+          <div class="project-card">
             <h2 class="project-name">Gallery Of JE</h2>
             <p class="project-description">
               A website full of high-quality retouched photos by Janoshan, one
@@ -214,7 +231,8 @@
           <div class="project-card">
             <h2 class="project-name">YouTubeDownloader Bot</h2>
             <p class="project-description">
-              A Viber bot to download YouTube videos easily.
+              A Viber bot to download YouTube videos easily. The bot is
+              currently not running though.
             </p>
             <div class="project-links">
               <a
