Update from https://github.com/sahithyandev/static-blog/commit/00d3b79aaae327def869e2c77901f8d1e2acd6ba

--- a/projects.html
+++ b/projects.html
@@ -190,6 +190,28 @@
         <p>Here are the projects I worked on recently.</p>
         <section class="projects-container">
           <div class="project-card">
+            <h2 class="project-name">@sahithyan/og</h2>
+            <p class="project-description">
+              A small library for generating static social card images (also
+              called Open Graph images) locally with the Node runtime.
+            </p>
+            <div class="project-links">
+              <a
+                href="https://github.com/sahithyandev/og"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="styled-link"
+                >Source</a
+              ><a
+                href="https://npmjs.com/package/@sahithyan/og"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="styled-link"
+                >Demo</a
+              >
+            </div>
+          </div>
+          <div class="project-card">
             <h2 class="project-name">Kalvi Community</h2>
             <p class="project-description">
               The official website of Kalvi Community, an educational-related
