--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       let pageData;
       try {
         pageData = JSON.parse(
-          `{"latestPosts":[{"slug":"the-is-odd-npm-package-meme","estReadTime":"2 min read","title":"The is-odd NPM package","tags":["meme"],"dateCreated":"4 November 2021","lastUpdatedOn":"14 March 2022"},{"slug":"a-javascript-quiz","estReadTime":"8 min read","title":"A JavaScript Quiz — Explained","description":"Explanation of an amazing quiz I took an year ago.","tags":["explanation"],"dateCreated":"17 September 2021","lastUpdatedOn":"14 March 2022"},{"slug":"building-xcalc","estReadTime":"8 min read","title":"Story of Building XCalc","description":"Sharing how I built XCalc, an extended calculator.","tags":["experience","project"],"dateCreated":"10 June 2021","lastUpdatedOn":"3 June 2022"},{"slug":"javascript-shorthands","estReadTime":"4 min read","title":"JavaScript Shorthands","description":"Do you write JavaScript a lot? These shorthands might be helpful to you.","tags":["javascript"],"dateCreated":"7 April 2021","lastUpdatedOn":"14 March 2022"}]}`
+          `{"latestPosts":[{"slug":"open-graph-images","estReadTime":"5 min read","title":"Static Open Graph images","description":"I added statically-generated Open Graph images to my posts; and how I optimized them.","tags":["experience"],"dateCreated":"13 November 2022","lastUpdatedOn":"20 November 2022"},{"slug":"the-is-odd-npm-package-meme","estReadTime":"2 min read","title":"The is-odd NPM package","tags":["meme"],"dateCreated":"4 November 2021","lastUpdatedOn":"14 March 2022"},{"slug":"a-javascript-quiz","estReadTime":"8 min read","title":"A JavaScript Quiz — Explained","description":"Explanation of an amazing quiz I took an year ago.","tags":["explanation"],"dateCreated":"17 September 2021","lastUpdatedOn":"14 March 2022"},{"slug":"building-xcalc","estReadTime":"8 min read","title":"Story of Building XCalc","description":"Sharing how I built XCalc, an extended calculator.","tags":["experience","project"],"dateCreated":"10 June 2021","lastUpdatedOn":"3 June 2022"}]}`
         );
       } catch (e) {
         console.warn("pageData error", e);
@@ -451,6 +451,19 @@
         <section>
           <h2 class="sub-heading">Recent Posts</h2>
           <div class="posts-container">
+            <div class="post-card show" data-slug="open-graph-images">
+              <span class="post-released-date">13 November 2022</span
+              ><a href="/post/open-graph-images" data-is-internal="" class=" "
+                ><h3 class="title">Static Open Graph images</h3></a
+              >
+              <p class="description">
+                I added statically-generated Open Graph images to my posts; and
+                how I optimized them.
+              </p>
+              <div class="tags-container">
+                <span class="tag">experience</span>
+              </div>
+            </div>
             <div class="post-card show" data-slug="the-is-odd-npm-package-meme">
               <span class="post-released-date">4 November 2021</span
               ><a
@@ -485,22 +498,6 @@
               <div class="tags-container">
                 <span class="tag">experience</span
                 ><span class="tag">project</span>
-              </div>
-            </div>
-            <div class="post-card show" data-slug="javascript-shorthands">
-              <span class="post-released-date">7 April 2021</span
-              ><a
-                href="/post/javascript-shorthands"
-                data-is-internal=""
-                class=" "
-                ><h3 class="title">JavaScript Shorthands</h3></a
-              >
-              <p class="description">
-                Do you write JavaScript a lot? These shorthands might be helpful
-                to you.
-              </p>
-              <div class="tags-container">
-                <span class="tag">javascript</span>
               </div>
             </div>
           </div>
